Fixed alignment for login on nav bar

--- a/products.css
+++ b/products.css
@@ -41,7 +41,7 @@ li {
 }
 
 li.active {
-    margin-left: 32%;
+    margin-left: 50%;
 }
 
 a {
